<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:id="@+id/picCinema1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:id="@+id/picCinema2"
                android:layout_below="@+id/picCinema1"
                android:layout_alignLeft="@+id/picCinema1"
                android:layout_alignStart="@+id/picCinema1"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cinema_name"
                android:id="@+id/txtCinemaNameInfo"
                android:layout_below="@+id/picCinema2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cinema_address"
                android:id="@+id/txtCinemaAddressInfo"
                android:layout_below="@+id/txtCinemaNameInfo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_movies"
                android:id="@+id/btnAvailableMovies"
                android:layout_below="@+id/txtCinemaAddressInfo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />
        </RelativeLayout>
    </ScrollView>


</LinearLayout>