<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andrey.hw_cinemas.Fragments.BookTicketsDialogFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/book_tickets"
        android:id="@+id/txtBookTickets"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:id="@+id/spinner"
        android:layout_below="@+id/txtBookTickets"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/spinner"
        android:layout_toRightOf="@+id/txtBookTickets"
        android:layout_toEndOf="@+id/txtBookTickets" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtSeats"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reserve"
        android:id="@+id/lblReserve"
        android:layout_alignBottom="@+id/editText"
        android:layout_toLeftOf="@+id/editText"
        android:layout_toStartOf="@+id/editText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reserve"
        android:id="@+id/btnBookTicketsDialog"
        android:layout_below="@+id/lblReserve"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/edtSeats"
        android:layout_alignEnd="@+id/edtSeats"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="20"
        android:id="@+id/txtCurrentSeats"
        android:layout_above="@+id/btnBookTicketsDialog"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/seats"
        android:id="@+id/lblSeats"
        android:layout_above="@+id/btnBookTicketsDialog"
        android:layout_toRightOf="@+id/txtCurrentSeats"
        android:layout_toEndOf="@+id/txtCurrentSeats"
        android:layout_marginLeft="10dp"/>

</RelativeLayout>
